cmake_minimum_required(VERSION 3.15)
project(libcanopen VERSION 0.1.0 LANGUAGES CXX)

add_library(libcanopen STATIC src/canopen.cpp)
add_library(libcanopen::libcanopen ALIAS libcanopen)
target_include_directories(libcanopen PUBLIC ${CMAKE_CURRENT_LIST_DIR}/include)
target_compile_features(libcanopen PUBLIC cxx_std_20)

option(LIBCANOPEN_BUILD_TESTS "Build libcanopen host tests" OFF)
if(LIBCANOPEN_BUILD_TESTS)
    enable_testing()
    add_executable(libcanopen_tests tests/test_canopen.cpp)
    target_link_libraries(libcanopen_tests PRIVATE libcanopen::libcanopen)
    add_test(NAME libcanopen_tests COMMAND libcanopen_tests)
endif()
